objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Kunde__c</fullName>
        <label>% Kunde</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstarten</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <label>% Personal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstarten</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Basis__c</fullName>
        <formula>Product2.Basis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Basis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type_Id__c</fullName>
        <formula>CASESAFEID(Product2.RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Flow_Cluster_Dienstarten__c</fullName>
        <formula>Product2.T_Flow_Cluster_Dienstarten__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Flow Cluster Dienstarten</label>
        <type>Text</type>
    </fields>
</CustomObject>